# AIINFFRA

./: .gitignore  MAIN.md  NOW.md  PATH.md  README.md  leetgpu-roadmap.md  weekly-log-template.md
.claude/: AGENT_REFACTOR_PLAN.md  AIINFRAGUIDE_INTEGRATION.md  REFACTOR_REPORT.md  settings.local.json
.claude/agents/: ascend-to-gpu-coach.md  base-coach.md  cuda-tutor.md
.claude/memory/: README.md
.claude/skills/: README.md  code-review.md  concept-explain.md  interview-prep.md  next-step.md  perf-analysis.md  theory-study.md  weekly-report.md
cuda-kernels/: CMakeLists.txt
cuda-kernels/gemm/: gemm.cu
cuda-kernels/layernorm/: layernorm.cu
cuda-kernels/softmax/: softmax.cu
distributed-demos/: README.md
lessons/: 01-cuda-basics.md  02-gemm-naive.md  03-gemm-tiled.md  04-softmax.md  05-flash-attn-reading.md  06-triton-intro.md  README.md
papers/: README.md  process.md  template.md
reference/cuda/: CMakeLists.txt  README.md  vector_add.cu
reference/cuda/flash_attention/: flash_attn.cu
reference/cuda/gemm/: gemm.cu
reference/cuda/include/: activations.cuh  cuda_utils.cu  cuda_utils.h
reference/cuda/layernorm/: layernorm.cu
reference/cuda/softmax/: softmax.cu
roadmap/: README.md  agents.md  distributed.md  interviews.md  leetgpu-ladder.md  vllm.md
scripts/: fetch_papers.py
solutions/: README.md
triton-kernels/: README.md
vllm-notes/: README.md
weekly/: 2026-06-16-week1-cuda-basics.md  2026-06-22-week2-gemm-naive.md  2026-06-25-gemm-done.md  2026-06-29-week3-infra.md  README.md  _template.md  week-01.md  week-02.md  week-03.md  week-04.md
(+52 files in other folders)
